--- a/application.yml
+++ b/application.yml
@@ -1,1 +1,9 @@
-
+eureka:
+  instance:
+    #    instance-id: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${random.value}}
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    serviceUrl:
+      defaultZone : http://localhost:9012/eureka
